--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
         <h3>My first website</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, suscipit velit voluptatibus, voluptatum architecto inventore corrupti nostrum asperiores tempore quae quis et commodi, exercitationem veniam! Voluptate quidem optio aliquid quisquam!</p>
     </div>
+    <div>
+        <h3>My second website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, suscipit velit voluptatibus, voluptatum architecto inventore corrupti nostrum asperiores tempore quae quis et commodi, exercitationem veniam! Voluptate quidem optio aliquid quisquam!</p>
+    </div>
+    <div>
+        <h3>My third website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, suscipit velit voluptatibus, voluptatum architecto inventore corrupti nostrum asperiores tempore quae quis et commodi, exercitationem veniam! Voluptate quidem optio aliquid quisquam!</p>
+    </div>
     
 </body>
 </html>
