--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
         <h3>My third website</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, suscipit velit voluptatibus, voluptatum architecto inventore corrupti nostrum asperiores tempore quae quis et commodi, exercitationem veniam! Voluptate quidem optio aliquid quisquam!</p>
     </div>
+    <div>
+        <h3>how to add incremental code</h3>
+        <ol>
+            <li>git add .</li>
+            <li>git commit -m"added a meaningful commit message"</li>
+            <li>git Push</li>
+        </ol>
+    </div>
     
 </body>
 </html>
