added tohar image

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
             <li>git Push</li>
         </ol>
     </div>
+    <div>
+        <h3>Toha will get rewarded</h3>
+        <img src="Toha.jpg" alt="">
+    </div>
     
 </body>
 </html>
